[package]
name = "ipv6_proxy"
version = "0.1.18"
edition = "2021"
authors = ["i18n.site@gmail.com", "zu1k <i@lgf.im>"]
description = "Http proxy, every request from a separate IPv6 address."
readme = "README.md"
license = "MIT"
homepage = "https://atomgit.com/i18n-in/ipv6_proxy"
repository = "https://atomgit.com/i18n-in/ipv6_proxy.git"

[dependencies]
cidr = "0.2"
getopts = "0.2"
hyper = { version = "1.3", features = ["client", "server", "http1"] }
tokio = { version = "1", features = [
  "net",
  "rt-multi-thread",
  "macros",
  "io-util",
] }
rand = "0.8"
aok = "0.1.12"
genv = "0.1.10"
static_init = "1.0.3"
xerr = "0.1.14"
loginit = "0.1.13"
tracing = "0.1.40"
base64 = "0.22.1"
axum = "0.7.5"
hyper-util = "0.1.5"
http-body-util = "0.1.2"
jemallocator = "0.5.4"

[dev-dependencies]
[profile.release]
strip = true
lto = true
opt-level = "s"
codegen-units = 1
